@@ -95,7 +95,7 @@ typedef struct _dtd_marked
 
 typedef enum
 { DM_DTD,				/* DTD mode: no data allowed (?) */
-  DM_SGML				/* Environment has only elements */
+  DM_DATA				/* Environment has only elements */
 } data_mode;
 
 
@@ -107,6 +107,7 @@ typedef struct _sgml_environment
   struct _xmlns *thisns;		/* Name space of element */
 #endif
   dtd_space_mode space_mode;		/* How to handle blanks */
+  dtd_map *map;				/* SHORTREF map */
   struct _sgml_environment *parent;	/* Parent environment */
 } sgml_environment;
 
@@ -137,6 +138,7 @@ typedef struct _dtd_parser
   int      previous_char;		/* previous character */
   int	   saved;			/* saved character */
   dtd_char_encoding encoding;		/* CDATA output character-set */
+  dtd_map *map;				/* SHORTREF map */
 #ifdef UTF8
   int	   utf8_decode;			/* decode UTF-8 sequences? */
   int      utf8_char;			/* building character */
